--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 body{ background-color: salmon;
 }
 h1 {
-    color: #8b0000;
+    color: #520a0a;
     font-size: 60px;
     text-align: center;
   }
@@ -16,6 +16,9 @@ h1 {
      font-size: 20px;}
 
      button{
+         color: rgb(223, 112, 140);
          border-color: red;
-         background-color: saddlebrown;
+         background-color: rgb(75, 63, 63);
      }
+
+    
