attempted to add scroll bar(failed/wip) and web txt

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,4 +21,10 @@ h1 {
          background-color: rgb(75, 63, 63);
      }
 
+     .container {
+      overflow-y: scroll;
+      height: 250px;
+      width: 250px;
+      }
+
     
