--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,27 @@
-body{ background-color: salmon;
+body{ background-color: black;
 }
 h1 {
-    color: #520a0a;
+    color: #f07171;
     font-size: 60px;
     text-align: center;
   }
   p {
       text-align: center;
   }
+  p2,p3 {color:rgb(252, 199, 199);
+  font-size: 20px;
+  font-style: initial;
+  line-height: 0.5px;
+  }
+
+  
+  
+
   img,button {
     display: block;
     margin: 0 auto;
   }
-  p {color: black;
+  p {color: rgb(252, 199, 199);
      font-size: 20px;}
 
      button{
@@ -27,8 +36,13 @@ h1 {
       width: 250px;
       }
 
+      h2 {color: #f07171;
+      
+      }
+
+      a{color: red;}
+
       button {
         padding: 10px 15px;
         }
-
-    
+        
