changed border style

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,6 @@ h1 {
           border-color:salmon;
           border-width: 5px;
           border-style: groove;
-          border-radius: 8px;
+          border-radius: 20%;
         }
         
