--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
-body{ background-image: url(https://i.imgur.com/ZAEHRzE.png);
-}
+/*body{ background-image: url(https://i.imgur.com/ZAEHRzE.png);
+}*/
+body{background-color: black;}
 h1 {
     color: #f07171;
     font-size: 60px;
